--- a/campus_riacho/css/styles.css
+++ b/campus_riacho/css/styles.css
@@ -1,7 +1,7 @@
 body {
   font-size: 16px;
   color: #fff;
-  background-color: #557c3e; 
+  background-color: #195128; 
   font-family: 'Oxygen', sans-serif;
 }
 
@@ -27,7 +27,7 @@ body {
 
 .navbar-brand h1 { /* Restaurant name */
   font-family: 'Lora', serif;
-  color: #557c3e;
+  color: #195128;
   font-size: 1.4em;
   text-transform: uppercase;
   font-weight: bold;
@@ -53,7 +53,7 @@ body {
   margin-top: 10px;
 }
 #nav-list a {
-  color: #557c3e;
+  color: #195128;
   text-align: center;
 }
 #nav-list a:hover {
@@ -77,7 +77,7 @@ body {
 }
 
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #557c3e;
+  border: 1px solid #195128;
 }
 .navbar-header button.navbar-toggle {
   clear: both;
@@ -103,7 +103,7 @@ body {
   font-size: 1.3em;
 }
 #address p {
-  color: #557c3e;
+  color: #195128;
   font-size: .8em;
   line-height: 1.8;
 }
@@ -131,18 +131,17 @@ body {
   margin-right: auto;
 }
 
-#jumbo-tile span{
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
-  font-size: 1.4em;
-  text-transform: uppercase;
-  background-color: #000;
-  color: #fff;
-  opacity: .8;
+#jumbo-tile span {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-size: 0.8em;
+    text-transform: uppercase;
+    background-color: #000;
+    color: #fff;
+    opacity: .8;
 }
-
 
 
 .jumbotron:hover {
@@ -150,7 +149,7 @@ body {
 
 }
 
-#mapid{
+#map{
   height: 250px;
 }
 
@@ -207,7 +206,7 @@ body {
   right: 0;
   width: 100%;
   text-align: center;
-  font-size: 1.0em;
+  font-size: 0.8em;
   text-transform: uppercase;
   background-color: #000;
   color: #fff;
@@ -325,7 +324,7 @@ body {
     padding: 10px;
     border: 2px solid #fff;
     background-color: #EEEEEE;
-    color: ##557c3e;
+    color: #195128;
   }
 
 
